[tool.poetry]
name = "aiorentry"
version = "0.1.0"
description = "Asynchronous client for https://rentry.co/ (https://rentry.org/)"
authors = ["froosty <froosty.gh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.10.1"
yarl = "^1.9.4"
typing-extensions = "^4.12.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-aiohttp = "^1.0.5"
anyio = "^4.4.0"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
flake8 = "^7.1.1"
flake8-blind-except = "^0.2.1"
flake8-builtins = "^2.5.0"
flake8-commas = "^4.0.0"
flake8-comprehensions = "^3.15.0"
flake8-debugger = "^4.1.2"
flake8-print = "^5.0.0"
flake8-quotes = "^3.4.0"
isort = "^5.13.2"
flake8-bas = "^1.0.0"
flake8-pyproject = "^1.2.3"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.flake8]
ignore="A003,BAS10,BAS110,BAS20,BAS210,BAS30,BAS310"

[tool.isort]
multi_line_output = 5
include_trailing_comma=true

[tool.pytest.ini_options]
addopts = "--cov=aiorentry --cov-report html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
