[tool.poetry]
name = "aiorentry"
version = "0.1.2"
description = "Asynchronous client for https://rentry.co/ (https://rentry.org/)"
authors = ["froosty <froosty.gh@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/froosty/aiorentry"
keywords = ["markdown", "pastebin", "rentry"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Markup",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = ">=3.9.0"
yarl = "1.13.1"
typing-extensions = "^4.12.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-aiohttp = "^1.0.5"
anyio = "^4.6.0"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-blind-except = "^0.2.1"
flake8-builtins = "^2.5.0"
flake8-commas = "^4.0.0"
flake8-comprehensions = "^3.15.0"
flake8-debugger = "^4.1.2"
flake8-print = "^5.0.0"
flake8-quotes = "^3.4.0"
isort = "^5.13.2"
flake8-bas = "^1.0.0"
flake8-pyproject = "^1.2.3"
mypy = "1.11.2"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.flake8]
ignore="A003,BAS10,BAS110,BAS20,BAS210,BAS30,BAS310"

[tool.isort]
multi_line_output = 5
include_trailing_comma=true

[tool.pytest.ini_options]
addopts = "--cov=aiorentry --cov-report html"

[tool.poetry_bumpversion.file."aiorentry/__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
